Reactualize unit tests